<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvBuffer"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:textAlignment="viewEnd"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/tvNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_vertical"
        android:textAlignment="viewEnd"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/layoutButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBuffer" />

    <TableLayout
        android:id="@+id/layoutButtons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumber">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnEmpty0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btnEmpty1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="0dp"
                android:layout_weight="1"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btnClear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="0dp"
                android:layout_weight="1"
                android:onClick="onClearClick"
                android:text="@string/c"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnRemove"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="0dp"
                android:layout_weight="1"
                android:onClick="onRemoveClick"
                android:text="@string/_erase"
                android:textSize="34sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnSeven"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="0dp"
                android:layout_weight="1"
                android:onClick="onDigitClick"
                android:text="@string/_7"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnEight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="0dp"
                android:layout_weight="1"
                android:onClick="onDigitClick"
                android:text="@string/_8"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnNine"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="0dp"
                android:layout_weight="1"
                android:onClick="onDigitClick"
                android:text="@string/_9"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnDiv"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="0dp"
                android:layout_weight="1"
                android:onClick="onActionClick"
                android:text="@string/_div"
                android:textSize="34sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnFour"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="0dp"
                android:layout_weight="1"
                android:onClick="onDigitClick"
                android:text="@string/_4"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnFive"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="0dp"
                android:layout_weight="1"
                android:onClick="onDigitClick"
                android:text="@string/_5"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnSix"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="0dp"
                android:layout_weight="1"
                android:onClick="onDigitClick"
                android:text="@string/_6"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnMul"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="0dp"
                android:layout_weight="1"
                android:onClick="onActionClick"
                android:text="@string/_mul"
                android:textSize="34sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnOne"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="0dp"
                android:layout_weight="1"
                android:onClick="onDigitClick"
                android:text="@string/_1"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnZero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="0dp"
                android:layout_weight="1"
                android:onClick="onDigitClick"
                android:text="@string/_2"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnThree"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="0dp"
                android:layout_weight="1"
                android:onClick="onDigitClick"
                android:text="@string/_3"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnMinus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="0dp"
                android:layout_weight="1"
                android:onClick="onActionClick"
                android:text="@string/_minus"
                android:textSize="34sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnPoint"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="0dp"
                android:layout_weight="1"
                android:onClick="onDotClick"
                android:text="@string/_dot"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnTwo"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="0dp"
                android:layout_weight="1"
                android:onClick="onDigitClick"
                android:text="@string/_0"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnEquals"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_500"
                android:onClick="onActionClick"
                android:text="@string/_equal"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btnPlus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="0dp"
                android:layout_weight="1"
                android:accessibilityHeading="false"
                android:onClick="onActionClick"
                android:text="@string/_plus"
                android:textSize="34sp" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>